--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/grassedge/git-pr-release-action.git"
+    "url": "git+https://github.com/bouchedid/git-pr-release-action.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/grassedge/git-pr-release-action/issues"
+    "url": "https://github.com/bouchedid/git-pr-release-action/issues"
   },
-  "homepage": "https://github.com/grassedge/git-pr-release-action#readme",
+  "homepage": "https://github.com/bouchedid/git-pr-release-action#readme",
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@actions/github": "^2.0.0",
     "@zeit/ncc": "^0.20.5",
-    "git-pr-release": "^1.0.4",
+    "git-pr-release-library": "^1.0.0",
     "moment-timezone": "^0.5.27"
   }
 }
